# todoapp

./: .gitignore  functional_test.py  pyproject.toml
todo/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/tests/: test_api.py  test_model.py
todoapp/: settings.py  urls.py
